# ZAiSD

ZAiSD_Lab1/ZAiSD_Lab1/: examples  input_list.txt  input_table.txt  main.cpp  output.txt
ZAiSD_Lab1/ZAiSD_Lab1.xcodeproj/: project.pbxproj
ZAiSD_Lab1/ZAiSD_Lab1.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ZAiSD_Lab1/ZAiSD_Lab1.xcodeproj/project.xcworkspace/xcuserdata/konstantyn.xcuserdatad/: UserInterfaceState.xcuserstate
ZAiSD_Lab1/ZAiSD_Lab1.xcodeproj/xcuserdata/konstantyn.xcuserdatad/xcschemes/: ZAiSD_Lab1.xcscheme  xcschememanagement.plist
ZAiSD_Lab2/ZAiSD_Lab2/: examples  input_list.txt  input_table.txt  main.cpp  output.txt
ZAiSD_Lab2/ZAiSD_Lab2.xcodeproj/: project.pbxproj
ZAiSD_Lab2/ZAiSD_Lab2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ZAiSD_Lab2/ZAiSD_Lab2.xcodeproj/project.xcworkspace/xcuserdata/konstantyn.xcuserdatad/: UserInterfaceState.xcuserstate
ZAiSD_Lab2/ZAiSD_Lab2.xcodeproj/xcshareddata/xcschemes/: ZAiSD_Lab2.xcscheme
ZAiSD_Lab2/ZAiSD_Lab2.xcodeproj/xcuserdata/konstantyn.xcuserdatad/xcschemes/: xcschememanagement.plist
ZAiSD_Lab3/ZAiSD_Lab3/: main.cpp
ZAiSD_Lab3/ZAiSD_Lab3.xcodeproj/: project.pbxproj
ZAiSD_Lab3/ZAiSD_Lab3.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ZAiSD_Lab3/ZAiSD_Lab3.xcodeproj/project.xcworkspace/xcuserdata/konstantyn.xcuserdatad/: UserInterfaceState.xcuserstate
ZAiSD_Lab3/ZAiSD_Lab3.xcodeproj/xcuserdata/konstantyn.xcuserdatad/xcschemes/: xcschememanagement.plist
ZAiSD_Lab4/: CMakeLists.txt  main.cpp
ZAiSD_Lab5/: CMakeLists.txt  main.cpp
